fix: push green orb further right on mobile, shorten gsearch query/autocomplete for mobile

--- a/Desktop/New Vibe Coding/rozeta-website-2/css/main.css
+++ b/Desktop/New Vibe Coding/rozeta-website-2/css/main.css
@@ -2466,7 +2466,7 @@
     width: 140px;
     height: 140px;
     bottom: -20px;
-    right: -50px;
+    right: -80px;
   }
 
   /* Scale down final CTA gradient */
